--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -12,17 +12,17 @@ a:active { color: #C00; background: transparent; }
 a:link img, a:visited img { border-style: none; }
 
 span.img {
-/*clear: both;*/
+clear: both;
 display: inline-block;
 }
 span.img.ft {
-/*clear: both;*/
+clear: left;
 display: inline;
 float: left;
 padding-right: 0.5em;
 }
 span.img.fb {
-/*clear: both;*/
+clear: right;
 display: inline;
 float: right;
 padding-left: 0.5em;
