--- a/template/OPS/xhtml/xhtml_header.vm
+++ b/template/OPS/xhtml/xhtml_header.vm
@@ -8,11 +8,10 @@
 #if (${sectionInfo.ImagePage})
 	<link rel="stylesheet" type="text/css" href="../css/vertical_image.css"/>
 #elseif (${sectionInfo.Middle} || ${sectionInfo.Bottom})
-	<link rel="stylesheet" type="text/css" href="../css/vertical_font.css"/>
+	<link rel="stylesheet" type="text/css" href="../css/vertical_text.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/vertical_middle.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/vertical.css"/>
 #else
-	<link rel="stylesheet" type="text/css" href="../css/vertical_font.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/vertical_text.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/vertical.css"/>
 #end
@@ -20,11 +19,10 @@
 #if (${sectionInfo.ImagePage})
 	<link rel="stylesheet" type="text/css" href="../css/horizontal_image.css"/>
 #elseif (${sectionInfo.Middle})
-	<link rel="stylesheet" type="text/css" href="../css/horizontal_font.css"/>
+	<link rel="stylesheet" type="text/css" href="../css/horizontal_text.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/horizontal_middle.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/horizontal.css"/>
 #else
-	<link rel="stylesheet" type="text/css" href="../css/horizontal_font.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/horizontal_text.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/horizontal.css"/>
 #end
@@ -47,6 +45,8 @@ min-height: ${sectionInfo.ImageHeightPercent}%;
 <body class="fit_h">
 #elseif (${kindle})
 <body class="kindle">
+#elseif (${bookInfo.koboFull})
+<body class="kobofull">
 #else
 <body>
 #end
