--- a/template/OPS/xhtml/cover.vm
+++ b/template/OPS/xhtml/cover.vm
@@ -23,7 +23,7 @@ min-height: ${sectionInfo.ImageHeightPercent}%;
 #end
 </head>
 
-#if (${svgImage})
+#if (${svgImage} && ${bookInfo.ImageOnly})
 <body>
 <div>
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 ${coverImage.Width} ${coverImage.Height}">
