--- a/template/OPS/package.vm
+++ b/template/OPS/package.vm
@@ -54,6 +54,7 @@
 		<item id="v_image" href="css/vertical_image.css" media-type="text/css"/>
 #else
 		<item id="vertical" href="css/vertical.css" media-type="text/css"/>
+		<item id="v_font" href="css/vertical_font.css" media-type="text/css"/>
 		<item id="v_text" href="css/vertical_text.css" media-type="text/css"/>
 		<item id="v_middle" href="css/vertical_middle.css" media-type="text/css"/>
 		<item id="v_image" href="css/vertical_image.css" media-type="text/css"/>
@@ -63,6 +64,7 @@
 		<item id="h_image" href="css/horizontal_image.css" media-type="text/css"/>
 #else
 		<item id="horizontal" href="css/horizontal.css" media-type="text/css"/>
+		<item id="h_font" href="css/horizontal_font.css" media-type="text/css"/>
 		<item id="h_text" href="css/horizontal_text.css" media-type="text/css"/>
 		<item id="h_middle" href="css/horizontal_middle.css" media-type="text/css"/>
 		<item id="h_image" href="css/horizontal_image.css" media-type="text/css"/>
