--- a/template/OPS/css_custom/vertical_font_sample.css
+++ b/template/OPS/css_custom/vertical_font_sample.css
@@ -2,7 +2,8 @@
 @namespace "http://www.w3.org/1999/xhtml";
 
 /** 縦書きフォント変更 埋め込み用
- ファイル名を vertical_font.css に変更すると有効 */
+ ファイル名を vertical_font.css に変更すると有効
+ template/fonts 以下にあるフォントファイルはePubファイルに追加されます */
 @font-face {
 font-family: "CustomFont";
 src: url(../fonts/aokin-mincho.ttf);
@@ -10,10 +11,3 @@ src: url(../fonts/aokin-mincho.ttf);
 body {
 font-family: "CustomFont", "@ＭＳ 明朝", "@MS Mincho", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", serif, sans-serif;
 }
-
-.gtc, .b {
-font-family: '@ＭＳ ゴシック','@MS Gothic',sans-serif !important;
-}
-
-.b, .gtc { font-weight: bold; }
-.i { font-style: italic; }
