--- a/template/OPS/css/horizontal_middle.css
+++ b/template/OPS/css/horizontal_middle.css
@@ -3,15 +3,19 @@
 
 /* 横書き左右中央 */
 @page {
-/* 上右下左 */
-margin: 0 0 0 0;
+margin-top: 0;
+margin-bottom: 0;
 }
 
 html {
+margin-top: 0;
+margin-bottom: 0;
 width:100%;
 height:100%;
 }
 body {
+margin-top: 0;
+margin-bottom: 0;
 vertical-align: baseline;
 width:100%;
 height:100%;
