--- a/template/OPS/xhtml/cover.vm
+++ b/template/OPS/xhtml/cover.vm
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:lang="ja" lang="ja">
 
 <head>
-#if (${svgImage})
+#if (${svgImage} && ${bookInfo.ImageOnly})
 	<link rel="stylesheet" type="text/css" href="../css/svg_image.css"/>
 #elseif (${kindle} && ${bookInfo.ImageOnly})
 	<link rel="stylesheet" type="text/css" href="../css/kindle_image.css"/>
