--- a/template/OPS/css/horizontal_text.vm
+++ b/template/OPS/css/horizontal_text.vm
@@ -27,17 +27,16 @@ font-size: ${fontSize}%;
 line-height: ${lineHeight}em;
 vertical-align: baseline;
 }
-body.kindle {
-line-height: ${lineHeight}em;
-}
 
 /** 太字、ゴシック */
 #if (${boldUseGothic})
 .b,
 #end
 .gtc {
-font-family: '@ＭＳ ゴシック','@MS Gothic',sans-serif;
+font-family: 'ＭＳ ゴシック','MS Gothic',sans-serif;
 }
-
-.b, .gtc { font-weight: bold; }
+#if (${gothicUseBold})
+.gtc,
+#end
+.b { font-weight: bold; }
 .i { font-style: italic; }
