--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -11,36 +11,41 @@ margin: 0;
 a:active { color: #C00; background: transparent; }
 a:link img, a:visited img { border-style: none; }
 
+/* 画像 */
 span.img {
 clear: both;
 display: inline-block;
 max-width: 100%;
 max-height: 100%;
+line-height: 1.2em;
 writing-mode: horizontal-tb;
 -webkit-writing-mode: horizontal-tb;
 -epub-writing-mode: horizontal-tb;
-line-height: 1.2em;
 }
 span.img img {
 min-width: 1em;
 }
+/* 単ページ横100% */
 .fit_w span.img {
 width: 100%;
 }
+/* 単ページ縦100% */
 .fit_h span.img {
 height: 100%;
 }
+/* 回り込み 上 */
 span.img.ft {
 display: inline;
 float: left;
 clear: left;
-padding-bottom: .5em;
+padding: 0 .5em .5em .5em;
 }
+/* 回り込み 下 */
 span.img.fb {
 display: inline;
 float: right;
 clear: right;
-padding-top: .5em;
+padding: .5em .5em 0 .5em;
 }
 span.img.fw img {
 width: 100%;
@@ -48,6 +53,24 @@ width: 100%;
 span.img.fh img {
 height: 100%;
 }
+/* 単ページfloat表示 */
+span.img.fpage {
+display: block;
+float: left;
+clear: both;
+width: 100%;
+height: 100%;
+text-align: center;
+vertical-align: center;
+padding-bottom: 100%;
+}
+/* 画像float表示 */
+span.img.fblk {
+display: block;
+float:left;
+padding: 0 .5em 100% .5em;
+}
+/* キャプション */
 span.img .caption {
 display: block;
 text-align: center;
@@ -191,20 +214,24 @@ border-left-width: 1px;
 }
 
 /* 文字サイズ 大 */
-.font1 { font-size: 110%; }
+.font1, .chap3 { font-size: 110%; }
 .font2 { font-size: 120%; }
-.font3 { font-size: 130%; }
+.font3, .chap2 { font-size: 130%; }
 .font4 { font-size: 140%; }
-.font5 { font-size: 150%; }
+.font5, .chap1 { font-size: 150%; }
 .font6 { font-size: 160%; }
 /* 文字サイズ 小 */
 .font-1 { font-size: 90%; }
 .font-2 { font-size: 83%; }
 .font-3 { font-size: 77%; }
-.font-4 { font-size: 70%; }
+.font-4, .kogaki  { font-size: 70%; }
 .font-5 { font-size: 66%; }
 .font-6 { font-size: 62%; }
-.kogaki { font-size: 70%; }
+
+/* 見出し*/
+.chap1, .chap2, .chap3 {
+clear: both;
+}
 
 /* 縦中横 */
 /* 外字画像と重ならない対策 ※有効にすると字下げ折り返し内で画面外にずれる */
