外字用1文字フォントがあれば組み込み(4バイト文字のみ)

--- a/template/OPS/css/horizontal_text.vm
+++ b/template/OPS/css/horizontal_text.vm
@@ -40,3 +40,9 @@ font-family: 'ＭＳ ゴシック','MS Gothic',sans-serif;
 #end
 .b { font-weight: bold; }
 .i { font-style: italic; }
+
+/** 外字フォント */
+#foreach(${gaijiInfo} in ${vecGaijiInfo})
+@font-face {font-family:"${gaijiInfo.ClassName}"; src:url(../gaiji/${gaijiInfo.FileName});}
+.${gaijiInfo.ClassName} {font-family:"${gaijiInfo.ClassName}";}
+#end
