--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -87,6 +87,10 @@ vertical-align: baseline;
 .gaiji img {
 height: 1em;
 }
+/* 外字フォント */
+.glyph {
+height: 1em;
+}
 /* 罫囲み */
 .border {
 border: 1px solid #000;
