正立注記を追加しtext-orientation: upright;を指定 IVS文字は正立用のspanで括る Readerの旧ファームで縦中横で正立させていた文字は正立指定に変更 ※他のビューア向けに正立タグ出力は残す 1文字フォント格納用gaijiパスをインストールパス直下に変更

--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -247,6 +247,13 @@ text-combine: horizontal;
 -epub-text-combine: horizontal;
 }
 
+/* 正立 */
+.upr {
+text-orientation: upright;
+-webkit-text-orientation: upright;
+-epub-text-orientation: upright;
+}
+
 /* ルビ内改行無し (Kindleで縦中横でずれるため) */
 .kindle ruby {
 white-space: nowrap;
