濁点でのフォント利用指定の実装（１文字フォントは調整中） JIS変換の一部が半角だったのを修正

--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -102,6 +102,9 @@ left: -.2em;
 /* 外字フォント */
 .glyph {
 width: 1em;
+text-orientation: upright;
+-webkit-text-orientation: upright;
+-epub-text-orientation: upright;
 }
 
 /* 罫囲み */
