外字注記一覧を更新 目次の <～> は img a タグのみ除去 目次ページに正立のスタイル追加漏れ修正 ※［＃米印］のエスケープ処理を調整

--- a/template/OPS/xhtml/xhtml_nav.vm
+++ b/template/OPS/xhtml/xhtml_nav.vm
@@ -20,6 +20,11 @@ li a {text-decoration:none; border-right-width:1px; border-right-style:solid; pa
 	-webkit-text-combine: horizontal;
 	-epub-text-combine: horizontal;
 }
+.upr {
+text-orientation: upright;
+-webkit-text-orientation: upright;
+-epub-text-orientation: upright;
+}
 #else
 @page {margin:.5em 0 0 .5em;}
 html {
