cssの行間指定のline-heightからemを削除

--- a/template/OPS/css/horizontal_text.vm
+++ b/template/OPS/css/horizontal_text.vm
@@ -22,9 +22,8 @@ margin: 0;
 padding: 0;
 display: block;
 color: #000;
-border: none;
 font-size: ${fontSize}%;
-line-height: ${lineHeight}em;
+line-height: ${lineHeight};
 vertical-align: baseline;
 }
 
