横組み時の文字位置調整＋外字画像の後ろのルビ対応(1文字分のみ)

--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -297,6 +297,7 @@ display: inline-block;
 text-orientation: sideways-right;
 -webkit-text-orientation: sideways-right;
 -epub-text-orientation: sideways-right;
+vertical-align: bottom;
 }
 
 /* 横書き */
