`epub:type`属性の値として`title-page`というものはなく、`titlepage`なら存在します。EPUB Validatorでエラーが解消することを確認しました。
# 参考
* [EPUB 3 Structural Semantics Vocabulary](http://www.idpf.org/epub/vocab/structure/)
* [EPUB Validator (beta)](http://validator.idpf.org/)

--- a/template/OPS/xhtml/xhtml_nav.vm
+++ b/template/OPS/xhtml/xhtml_nav.vm
@@ -54,7 +54,7 @@ nav#landmarks { display:none; }
 			<li><a epub:type="toc" href="nav.xhtml">目次</a></li>
 #end
 #if (${title_page})
-			<li><a epub:type="title-page" href="title.xhtml">扉</a></li>
+			<li><a epub:type="titlepage" href="title.xhtml">扉</a></li>
 #end
 #foreach(${sectionInfo} in ${sections})
 			<li><a epub:type="bodymatter" href="${sectionInfo.SectionId}.xhtml">本文</a></li>
