左右中央表示のテーブルに設定を戻した。

--- a/template/OPS/xhtml/xhtml_header.vm
+++ b/template/OPS/xhtml/xhtml_header.vm
@@ -52,7 +52,7 @@ min-height: ${sectionInfo.ImageHeightPercent}%;
 #if (${kindle})
 <div class="kindle_outer"><div class="kindle_inner">
 #end
-<div class="middle">
+<table class="middle"><tr><td>
 #end
 #if (${sectionInfo.Bottom})
 #if (${kindle})
