--- a/template/OPS/xhtml/title_middle.vm
+++ b/template/OPS/xhtml/title_middle.vm
@@ -37,7 +37,7 @@
 #else
 <body>
 #end
-<div class="middle">
+<table class="middle"><tr><td>
 
 #if (${PUBLISHER})
 	<div class="publisher">${PUBLISHER}</div>
@@ -71,7 +71,7 @@
 	<div class="subcreator btm pb2">${SUBCREATOR}</div>
 #end
 
-</div>
+</td></tr></table>
 #if (${kindle})
 </div></div>
 #end
