--- a/template/OPS/package.vm
+++ b/template/OPS/package.vm
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<package xmlns="http://www.idpf.org/2007/opf" unique-identifier="pub-id" xml:lang="ja" version="3.0"
-	prefix="rendition: http://www.idpf.org/vocab/rendition/#">
-	<metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
+<?xml version="1.0" encoding="utf-8"?>
+<package version="3.0" unique-identifier="pub-id" xmlns="http://www.idpf.org/2007/opf" prefix="ebpaj: http://www.ebpaj.jp/" xml:lang="ja">
+  <metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
 
 		<dc:title id="title">${title}</dc:title>
 		<meta refines="#title" property="dcterms:title">${title}</meta>
