--- a/template/OPS/xhtml/cover.vm
+++ b/template/OPS/xhtml/cover.vm
@@ -13,14 +13,18 @@
 	<link rel="stylesheet" type="text/css" href="../css/horizontal_image.css"/>
 #end
 	<title>${title}</title>
-#if (${sectionInfo.ImageHeight} > 0)
+
 <style type="text/css">
 body .img img {
 height: ${sectionInfo.ImageHeightPercent}%;
 min-height: ${sectionInfo.ImageHeightPercent}%;
+  display:            inline-block;
+  page-break-inside:  avoid;
+  max-height:         100%;
+  max-width:          100%;
 }
 </style>
-#end
+
 </head>
 
 #if (${svgImage} && ${bookInfo.ImageOnly})
