単ページ画像を全画面化

--- a/template/OPS/css/kindle_image.css
+++ b/template/OPS/css/kindle_image.css
@@ -28,3 +28,11 @@ body .img {
 width: auto;
 height: auto;
 }
+body .img img {
+height: ${sectionInfo.ImageHeightPercent}%;
+min-height: ${sectionInfo.ImageHeightPercent}%;
+  display:            inline-block;
+  page-break-inside:  avoid;
+  max-height:         100%;
+  max-width:          100%;
+}
