--- a/template/OPS/xhtml/svg_image.vm
+++ b/template/OPS/xhtml/svg_image.vm
@@ -1,11 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:lang="ja" lang="ja">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="ja" >
 <head>
-	<link rel="stylesheet" type="text/css" href="../css/svg_image.css"/>
+<meta charset="UTF-8"/>
+<title>作品名</title>
+	<link rel="stylesheet" type="text/css" href="../css/fixed-layout-jp.css"/>
+<meta name="viewport" content="width=${imageInfo.OutWidth}, height=${imageInfo.OutHeight}"/>
 </head>
 <body>
-<div>
+<div class="main">
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 ${imageInfo.OutWidth} ${imageInfo.OutHeight}">
 <image width="${imageInfo.OutWidth}" height="${imageInfo.OutHeight}" xlink:href="../images/${imageInfo.OutFileName}"/>
 </svg>
