--- a/template/OPS/package.vm
+++ b/template/OPS/package.vm
@@ -68,13 +68,14 @@
 		<item id="h_text" href="css/horizontal_text.css" media-type="text/css"/>
 		<item id="h_middle" href="css/horizontal_middle.css" media-type="text/css"/>
 		<item id="h_image" href="css/horizontal_image.css" media-type="text/css"/>
+		<item id="fixed-layout-jp" href="css/fixed-layout-jp.css" media-type="text/css"/>
 #end
 #end
 
 		<item id="nav" properties="nav" href="xhtml/nav.xhtml" media-type="application/xhtml+xml"/>
 
 #if (${bookInfo.InsertCoverPage})
-#if ($svgImage && ${bookInfo.ImageOnly})
+#if ($svgImage )
 		<item id="cover-page" href="xhtml/cover.xhtml" media-type="application/xhtml+xml" properties="svg"/>
 #else
 		<item id="cover-page" href="xhtml/cover.xhtml" media-type="application/xhtml+xml"/>
