--- a/template/OPS/xhtml/cover.vm
+++ b/template/OPS/xhtml/cover.vm
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:lang="ja" lang="ja">
 
 <head>
-#if (${svgImage} && ${bookInfo.ImageOnly})
+#if (${svgImage})
 <meta name="viewport" content="width=${coverImage.Width}, height=${imageInfo.OutHeight}"/>
 	<link rel="stylesheet" type="text/css" href="../css/fixed-layout-jp.css"/>
 #elseif (${kindle} && ${bookInfo.ImageOnly})
@@ -20,7 +20,7 @@
 
 </head>
 
-#if (${svgImage} && ${bookInfo.ImageOnly})
+#if (${svgImage})
 <body>
 <div>
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 ${coverImage.Width} ${coverImage.Height}">
