画像zip向けの修正完了

--- a/template/OPS/package.vm
+++ b/template/OPS/package.vm
@@ -51,6 +51,7 @@
 #elseif (${bookInfo.Vertical})
 #if (${bookInfo.ImageOnly})
 		<item id="v_image" href="css/vertical_image.css" media-type="text/css"/>
+		<item id="fixed-layout-jp" href="css/fixed-layout-jp.css" media-type="text/css"/>
 #else
 		<item id="vertical" href="css/vertical.css" media-type="text/css"/>
 		<item id="v_font" href="css/vertical_font.css" media-type="text/css"/>
@@ -61,7 +62,7 @@
 #end
 #else
 #if (${bookInfo.ImageOnly})
-		<item id="h_image" href="css/horizontal_image.css" media-type="text/css"/>
+		<item id="h_image" href="css/fixed-layout-jp.css" media-type="text/css"/>
 #else
 		<item id="horizontal" href="css/horizontal.css" media-type="text/css"/>
 		<item id="h_font" href="css/horizontal_font.css" media-type="text/css"/>
